--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017
       database: student-service
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
       
 server:
   port: 9090
